--- a/index.html
+++ b/index.html
@@ -4,42 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="script.js"></script>
     <title>Document</title>
   </head>
-  <body>
-    <script>
-      //url = "https://pokeapi.co/api/v2/";
-      //path = "pokemon?limit=151'";
-
-      function fetchKantoPokemon() {
-        fetch("https://pokeapi.co/api/v2/item?limit=151")
-          //fetch("https://pokeapi.co/api/v2/pokemon/?offset=80&limit=100")
-          .then((response) => response.json())
-          .then(function (allpokemon) {
-            allpokemon.results.forEach((pokemon) => {
-              fetchPokemonData(pokemon);
-            });
-          });
-      }
-
-      function fetchPokemonData(pokemon) {
-        let url = pokemon.url;
-        fetch(url)
-          .then((response) => response.json())
-          .then((pokeData) => {
-            if (
-              pokeData.cost === 3000 &&
-              pokeData.fling_power === 30 &&
-              pokeData.fling_effect === null &&
-              pokeData.baby_trigger_for === null
-            ) {
-              console.log("cost=3000 ");
-              console.log(pokeData);
-            }
-          });
-      }
-
-      fetchKantoPokemon();
-    </script>
-  </body>
+  <body></body>
 </html>
